[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/UI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/exit.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI_Scene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/MainUI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Audios/button_click_sound.wav" type="AudioStream" id=7]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="UI_Scene" parent="." instance=ExtResource( 5 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_top = 60

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 60.0
margin_right = 984.0
margin_bottom = 580.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 307.0
margin_right = 657.0
margin_bottom = 520.0
custom_constants/separation = 140

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 350, 100 )
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 350.0
margin_bottom = 420.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 95.0
margin_right = 255.0
margin_bottom = 180.0
size_flags_horizontal = 6
size_flags_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Play" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 3 )]

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 100.0
margin_right = 160.0
margin_bottom = 180.0
rect_min_size = Vector2( 40, 80 )
size_flags_vertical = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
